manifests/gpt/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: molla
spec:
  replicas: 1
  selector:
    matchLabels:
      app: molla
  template:
    metadata:
      labels:
        app: molla
    spec:
      containers:
        - name: molla
          image: yoness/molla:latest
          ports:
            - containerPort: 8000
