manifests/gpt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: molla
spec:
  selector:
    app: molla
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
